
syntax = "proto3";


package TODO;

service MutationManager {
  //hotel modify order
  rpc HotelModifyOrder (HotelModifyOrderRequest) returns (HotelModifyOrderReply) {}

  //hotel close order
  rpc HotelCloseOrder (HotelCloseOrderRequest) returns (HotelCloseOrderReply) {}

  //post order by adviser
  rpc AdviserpostOrder (AdviserpostOrderRequest) returns (AdviserpostOrderReply) {}

  //register order by pt
  rpc PtRegisterOrder (PtRegisterOrderRequest) returns (PtRegisterOrderReply) {}

}


message HotelModifyOrderRequest {
  string order_id = 1;
  string job = 2;
  timestamp start_time_changed = 3;
  uint64 duration_changed = 4;
  string gender_mode_change = 5;
  uint64 count_changed = 6;
  uint64 count_male_changed = 7;
  uint64 count_female_changed = 8;
}


message HotelModifyOrderReply {
  string hotel_modify_result =1;
}


message HotelCloseOrderRequest {
  string order_id = 1;
}


message HotelCloseOrderReply {
  string hotel_close_result =1;
}

message AdviserpostOrderRequest {
  string order_id = 1;
  bool is_float = 2;
  uint64 hourly_salary = 3;
  string work_content = 4;
  TODO string attention = 5;
}


message AdviserpostOrderReply {
  string adviser_post_result =1;
}


message PtRegisterOrderRequest {
  string order_id = 1;
}


message PtRegisterOrderReply {
  string pt_register_result =1;
}
